--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             text-align: center;
             font-family: 'Arial', sans-serif;
             position: relative;
+            overflow: hidden;
         }
         h1 {
             font-size: 3em;
